--- a/index.html
+++ b/index.html
@@ -6,10 +6,125 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goriber Ecommerce</title>
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/70a642cd7c.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <div class="container">
+        <div class="logo">
+            <a href="#">Hablu Programmer</a>
+        </div>
 
+
+        <div class="searchArea">
+            <div class="searchBox">
+                <i class="fas fa-search"></i>
+                <input type="search" placeholder="Search">
+            </div>
+        </div>
+
+
+        <div class="section1">
+            <img src="image/undraw_add_color_19gv.svg" alt="">
+        </div>
+
+        <div class="section1Button">
+            <h1>SU<span class="color">MM</span>ER</h1>
+
+            <h2>COLLEC<span class="color">TION</span></h2>
+
+            <button class="btn">Buy Now</button>
+        </div>
+
+        <div class="iconArea">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+
+        </div>
+
+    </div>
+
+    <section class="productSection">
+
+        <h3> New <span>Bags</span> Collection</h3>
+
+        <div class="product">
+
+            <div class="productBox">
+                <img src="image/undraw_shopping_app_flsj.svg" alt="">
+                <p>Black Genuine Leather Bags</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="buyBtn">Add to Cart</a>
+            </div>
+
+            <div class="productBox">
+                <img src="image/undraw_smartwatch_74tv.svg" alt="">
+                <p>Black Genuine Leather Bags</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="buyBtn">Add to Cart</a>
+            </div>
+
+            <div class="productBox">
+                <img src="image/undraw_Successful_purchase_re_mpig.svg" alt="">
+                <p>Black Genuine Leather Bags</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="buyBtn">Add to Cart</a>
+            </div>
+
+            <div class="productBox">
+                <img src="image/undraw_watch_application_uhc9.svg" alt="">
+                <p>Black Genuine Leather Bags</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="buyBtn">Add to Cart</a>
+            </div>
+
+            <div class="productBox">
+                <img src="image/undraw_in_no_time_6igu.svg" alt="">
+                <p>Black Genuine Leather Bags</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="buyBtn">Add to Cart</a>
+            </div>
+
+            <div class="productBox">
+                <img src="image/undraw_heatmap_uyye.svg" alt="">
+                <p>Black Genuine Leather Bags</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="buyBtn">Add to Cart</a>
+            </div>
+
+        </div>
+    </section>
+    <section class="about">
+        <div class="aboutBox">
+            <h1>About Company</h1>
+            <h4>Small E-commerce platfrom 2021 new arrivals mimi messenger <span>Buy Now</span></h4>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis voluptatem tempore consequuntur sit ad
+                eos reiciendis explicabo, magnam nobis, beatae at? Laborum, rerum qui? Qui, magni architecto amet libero
+                neque nam dignissimos cumque dolor assumenda necessitatibus saepe animi atque consequatur excepturi,
+                accusamus a autem, suscipit nemo sed. Sunt, ducimus dolorem.</p>
+        </div>
+
+        <div class="aboutBox">
+            <img src="image/undraw_heatmap_uyye.svg" alt="">
+        </div>
+    </section>
+
+    <section class="notification">
+        <h1>Subcribe for New product Notificaton</h1>
+        <div class="notificationInput">
+            <input type="email" placeholder="Enter Your E-mail">
+            <a href="#" class="notificationBtn">SEND</a>
+        </div>
+    </section>
+    <hr>
+
+    <footer>
+        <p>@All Right Reserved By Hublu Programmer</p>
+    </footer>
 </body>
 
 </html>
